Criei a rota de editar usuario, separei a rota usuario em controller, fiz alterações na migrations, inclusão dos dados do endereço e corrigi os seeders
